Add old privacy policy and update current privacy policy and terms of service to reflect social media platform features

--- a/old-privacy-policy.html
+++ b/old-privacy-policy.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Docuth Social Media Platform Privacy Policy</title>
+    <title>Docuth Privacy Policy</title>
     <style>
-        /* Light Theme (Default) */
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 20px;
-            color: #333; /* Dark text for light background */
-            background-color: #fff; /* Light background */
-            transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+            color: #333;
         }
         h1 {
             color: #2c3e50;
             border-bottom: 2px solid #3498db;
             padding-bottom: 10px;
-            transition: color 0.3s, border-color 0.3s;
         }
         h2 {
             color: #2980b9;
             margin-top: 25px;
-            transition: color 0.3s;
         }
         h3 {
             color: #16a085;
-            transition: color 0.3s;
         }
         ul {
             padding-left: 20px;
@@ -41,34 +35,13 @@
             margin: 0 auto;
         }
         .highlight {
-            background-color: #f8f9fa; /* Light background for highlight */
+            background-color: #f8f9fa;
             padding: 15px;
             border-left: 4px solid #3498db;
             margin: 15px 0;
-            transition: background-color 0.3s, border-color 0.3s;
         }
         .section {
             margin-bottom: 30px;
-        }
-
-        /* Dark Theme Styles */
-        body.dark-theme {
-            color: #e0e0e0; /* Light text for dark background */
-            background-color: #1a1a1a; /* Dark background */
-        }
-        body.dark-theme h1 {
-            color: #87ceeb; /* Lighter blue for H1 */
-            border-bottom-color: #4fa8e3; /* Lighter border */
-        }
-        body.dark-theme h2 {
-            color: #a6dcef; /* Lighter blue for H2 */
-        }
-        body.dark-theme h3 {
-            color: #5cdb95; /* Lighter green for H3 */
-        }
-        body.dark-theme .highlight {
-            background-color: #2a2a2a; /* Slightly lighter dark background for highlight */
-            border-left-color: #4fa8e3; /* Lighter accent border */
         }
     </style>
 </head>
@@ -77,8 +50,8 @@
         <h1>DOCUTH PRIVACY POLICY</h1>
         
         <div class="section">
-            <p>This Privacy Policy explains how Docuth, a global social media platform for sharing content based in Lagos, Nigeria ("Docuth," "we," "us," or "our"), collects, uses, stores, shares, and protects your information when you use our mobile application and website (collectively, the "Service").</p>
-            <p>By using the Docuth Service, you agree to the collection and use of information in accordance with this policy. We are committed to protecting your privacy and handling your data transparently as you share, discover, and engage with content on our social media platform.</p>
+            <p>This Privacy Policy explains how Docuth, a global content streaming platform based in Lagos, Nigeria ("Docuth," "we," "us," or "our"), collects, uses, stores, shares, and protects your information when you use our mobile application and website (collectively, the "Service").</p>
+            <p>By using the Docuth Service, you agree to the collection and use of information in accordance with this policy. We are committed to protecting your privacy and handling your data transparently.</p>
         </div>
 
         <div class="section">
@@ -88,8 +61,8 @@
             <h3>Information You Provide Directly:</h3>
             <ul>
                 <li><strong>Account Information:</strong> When you create an account, we collect your name, email address, and password.</li>
-                <li><strong>Profile Information:</strong> You may provide a display name, profile picture, bio, and links to your other social media accounts or website. This helps other users discover and connect with you on our platform.</li>
-                <li><strong>Content Information:</strong> We collect the media content you share on our social media platform (videos, audio, images, text posts), including titles, descriptions, tags, categories, thumbnails, and any social interactions such as likes, comments, shares, and follows.</li>
+                <li><strong>Profile Information:</strong> If you're a Viewer, you may provide a profile picture and preferences. If you're a Creator, you provide a display name, profile picture, bio, and links to your social media or website.</li>
+                <li><strong>Content Information:</strong> If you are a Creator, we collect the media content you upload (videos, audio, images), including titles, descriptions, tags, categories, and thumbnails.</li>
                 <li><strong>KYC (Know Your Customer) Information (for Creators):</strong> To enable monetization and comply with financial regulations, creators must provide sensitive identity verification documents. This includes:
                     <ul>
                         <li><strong>Identity Documents:</strong> Photos of government-issued IDs (e.g., National ID Card (NIMC), Driver's License, International Passport, Permanent Voter's Card - PVC).</li>
@@ -102,7 +75,7 @@
 
             <h3>Information Collected Automatically:</h3>
             <ul>
-                <li><strong>Usage Data:</strong> Information about how you access and use our social media platform, such as content viewed, posts shared, search queries, pages viewed, time spent on the app, features used, social interactions (likes, comments, shares, follows), and engagement patterns.</li>
+                <li><strong>Usage Data:</strong> Information about how you access and use the Service, such as videos watched, search queries, pages viewed, time spent on the app, features used, and interactions with content.</li>
                 <li><strong>Device Information:</strong> Details about the device you use to access Docuth, including IP address, device type, operating system, unique device identifiers, browser type, and mobile network information.</li>
                 <li><strong>Log Data:</strong> Server logs may include details of your requests, IP address, browser type, referring/exit pages, and the date/time of your visit.</li>
                 <li><strong>Cookies and Tracking Technologies:</strong> We use cookies and similar technologies (like pixels and web beacons) to collect information about your Browse behavior, recognize you, remember your preferences, and analyze our Service performance.</li>
@@ -118,19 +91,19 @@
             <h2>2. How We Use Your Information</h2>
             <p>We use the collected information for various purposes, including:</p>
             <ul>
-                <li><strong>To Provide and Maintain the Service:</strong> Operate our social media platform, display shared content, enable content sharing and discovery, facilitate social interactions (likes, comments, shares, follows), and provide customer support.</li>
+                <li><strong>To Provide and Maintain the Service:</strong> Operate the platform, display content, allow content uploads, enable streaming, and provide customer support.</li>
                 <li><strong>To Process Transactions:</strong> Facilitate viewer payments for content and process creator payouts, including commission deductions.</li>
-                <li><strong>To Personalize Your Experience:</strong> Offer tailored content recommendations, suggest users to follow, create personalized feeds, and provide a customized interface based on your social interactions, content preferences, and engagement history.</li>
-                <li><strong>For Communication:</strong> Send you important updates, social notifications (likes, comments, follows, mentions), push notifications, email updates, marketing messages, and respond to your inquiries.</li>
+                <li><strong>To Personalize Your Experience:</strong> Offer tailored content recommendations, suggested creators to follow, and a customized interface based on your viewing history and preferences.</li>
+                <li><strong>For Communication:</strong> Send you important updates, notifications (in-app, push, email), marketing messages, and respond to your inquiries.</li>
                 <li><strong>For Security and Compliance:</strong>
                     <ul>
                         <li><strong>Verify Identity:</strong> Use KYC information to confirm the identity of creators, prevent fraud, comply with anti-money laundering (AML) and counter-terrorism financing (CFT) regulations in Nigeria and other applicable jurisdictions.</li>
                         <li><strong>Ensure Safety:</strong> Monitor content for compliance with our Content Guidelines and Copyright Policy, detect and prevent fraudulent or abusive activities.</li>
                     </ul>
                 </li>
-                <li><strong>For Analytics and Improvement:</strong> Understand how users interact with our social media platform, analyze engagement patterns, social connections, content performance, troubleshoot issues, and make data-driven decisions to improve features and functionality.</li>
-                <li><strong>For Marketing and Promotion:</strong> Send you information about new features, trending content, social events, and promotions, both for Docuth and for content creators and influencers on our platform.</li>
-                <li><strong>To Enforce Our Terms:</b> Administer and enforce our Terms and Conditions, including investigating potential violations.</li>
+                <li><strong>For Analytics and Improvement:</strong> Understand how users interact with our Service, analyze usage patterns, troubleshoot issues, and make data-driven decisions to improve features and functionality.</li>
+                <li><strong>For Marketing and Promotion:</strong> Send you information about new features, content, and promotions, both for Docuth and for creators on our platform.</li>
+                <li><strong>To Enforce Our Terms:</strong> Administer and enforce our Terms and Conditions, including investigating potential violations.</li>
             </ul>
         </div>
 
@@ -138,7 +111,7 @@
             <h2>3. How We Share Your Information</h2>
             <p>We may share your information with third parties in the following circumstances:</p>
             <ul>
-                <li><strong>With Other Users:</strong> Your public profile information, shared content, and social interactions (likes, comments, shares) are visible to other users on our platform as part of the social media experience. Certain aggregated and anonymized data about engagement with your content may be shared with you to help you understand your audience. Your direct identifying information beyond what you choose to make public is not shared without your explicit consent.</li>
+                <li><strong>With Creators:</strong> If you are a viewer, certain aggregated and anonymized data about your viewing habits (e.g., views, watch time, general demographics) may be shared with the creators whose content you watch, to help them understand their audience. Your direct identifying information is not shared with creators without your explicit consent.</li>
                 <li><strong>With Service Providers:</strong> We share information with third-party vendors and service providers who perform services on our behalf, such as payment processing (Stripe, Paystack, Flutterwave), cloud hosting, content delivery networks (CDNs), analytics, and customer support. These providers are obligated to protect your information.</li>
                 <li><strong>For Legal Reasons:</strong> We may disclose your information if required to do so by law, in response to a subpoena or court order, or if we believe such action is necessary to comply with legal obligations, protect our rights or property, or ensure the safety of our users or the public. This includes cooperating with law enforcement agencies in Nigeria and other jurisdictions.</li>
                 <li><strong>Business Transfers:</strong> In the event of a merger, acquisition, sale of assets, or bankruptcy, your information may be transferred as part of the transaction. We will notify you via email or a prominent notice on our Service of any such change in ownership or control of your personal information.</li>
@@ -178,7 +151,7 @@
 
         <div class="section">
             <h2>8. Children's Privacy</h2>
-            <p>Docuth is a social media platform not intended for individuals under the age of 18. We do not knowingly collect personally identifiable information from anyone under 18. If you are a parent or guardian and you are aware that your child has provided us with personal information or is using our social media platform, please contact us immediately. If we become aware that we have collected personal information from anyone under 18 without verification of parental consent, we will take steps to remove that information from our servers and suspend the account.</p>
+            <p>Docuth is not intended for individuals under the age of 18. We do not knowingly collect personally identifiable information from anyone under 18. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us immediately. If we become aware that we have collected personal information from anyone under 18 without verification of parental consent, we will take steps to remove that information from our servers.</p>
         </div>
 
         <div class="section">
