--- a/old-terms-of-service.html
+++ b/old-terms-of-service.html
@@ -108,7 +108,7 @@
         </header>
         
         <section>
-            <p>This outlines the legal agreement between you (<em>"User" or "Creator"</em> as applicable) and Docuth, operating globally with its primary operations based in Lagos, Nigeria (<em>"Docuth," "we," "us," or "our"</em>). These Terms govern your access to and use of the Docuth mobile application and website (collectively, the <strong>"Service"</strong>).</p>
+            <p>This outlines the legal agreement between you (<em>"User" or "Creator"</em> as applicable) and Docuth, operating globally (<em>"Docuth," "we," "us," or "our"</em>). These Terms govern your access to and use of the Docuth mobile application and website (collectively, the <strong>"Service"</strong>).</p>
         </section>
         
         <section>
@@ -169,7 +169,7 @@
             <h2>6. Monetization & Payouts (for Creators)</h2>
             <ul>
                 <li><strong>Monetization Eligibility:</strong> Only verified creators who have completed KYC and comply with all guidelines are eligible to monetize their content.</li>
-                <li><strong>Revenue Share:</strong> Docuth will deduct a <span style="color:#e74c3c;">30% commission</span> from all watch fees (pay-per-watch earnings) generated from your content. The remaining percentage will be credited to your Docuth earnings balance.</li>
+                <li><strong>Revenue Share:</strong> Docuth will deduct a <span style="color:#e74c3c;">19.5% commission</span> from all watch fees (pay-per-watch earnings) generated from your content. The remaining percentage will be credited to your Docuth earnings balance.</li>
                 <li><strong>Payout Thresholds:</strong> Payouts will only be processed once your earnings balance reaches the minimum withdrawal threshold as specified in your Creator Dashboard.</li>
                 <li><strong>Payment Methods:</strong> Payouts will be made via the payment methods you designate in your Payout Settings, including any valid bank account.</li>
                 <li><strong>Accuracy:</strong> You are responsible for ensuring your payout information is accurate and up-to-date. Docuth is not liable for delayed or failed payouts due to incorrect information provided by you.</li>
