--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,42 +6,105 @@
     <title>Docuth Privacy Policy</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            line-height: 1.7;
             margin: 0;
             padding: 20px;
-            color: #333;
+            color: #1a1a1a;
+            background-color: #ffffff;
         }
         h1 {
-            color: #2c3e50;
-            border-bottom: 2px solid #3498db;
-            padding-bottom: 10px;
+            color: #1a1a1a;
+            border-bottom: 3px solid #0066cc;
+            padding-bottom: 15px;
+            font-size: 2.2em;
+            font-weight: 700;
         }
         h2 {
-            color: #2980b9;
-            margin-top: 25px;
+            color: #0066cc;
+            margin-top: 35px;
+            margin-bottom: 15px;
+            font-size: 1.4em;
+            font-weight: 600;
         }
         h3 {
-            color: #16a085;
+            color: #333333;
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-weight: 600;
+        }
+        p {
+            margin-bottom: 16px;
+            color: #2d2d2d;
         }
         ul {
-            padding-left: 20px;
+            padding-left: 24px;
+            margin-bottom: 16px;
         }
         li {
-            margin-bottom: 8px;
+            margin-bottom: 12px;
+            color: #2d2d2d;
+        }
+        strong {
+            color: #1a1a1a;
+            font-weight: 600;
         }
         .container {
             max-width: 900px;
             margin: 0 auto;
+            background-color: #ffffff;
+            box-shadow: 0 0 20px rgba(0,0,0,0.05);
+            border-radius: 8px;
+            padding: 40px;
         }
         .highlight {
-            background-color: #f8f9fa;
-            padding: 15px;
-            border-left: 4px solid #3498db;
-            margin: 15px 0;
+            background-color: #f8fafc;
+            padding: 20px;
+            border-left: 4px solid #0066cc;
+            margin: 20px 0;
+            border-radius: 0 4px 4px 0;
         }
         .section {
-            margin-bottom: 30px;
+            margin-bottom: 40px;
+            padding-bottom: 20px;
+            border-bottom: 1px solid #e5e7eb;
+        }
+        .section:last-child {
+            border-bottom: none;
+        }
+        
+        @media (prefers-color-scheme: dark) {
+            body {
+                color: #e5e7eb;
+                background-color: #0f172a;
+            }
+            h1 {
+                color: #f1f5f9;
+                border-bottom-color: #3b82f6;
+            }
+            h2 {
+                color: #60a5fa;
+            }
+            h3 {
+                color: #cbd5e1;
+            }
+            p, li {
+                color: #cbd5e1;
+            }
+            strong {
+                color: #f1f5f9;
+            }
+            .container {
+                background-color: #1e293b;
+                box-shadow: 0 0 20px rgba(0,0,0,0.3);
+            }
+            .highlight {
+                background-color: #334155;
+                border-left-color: #3b82f6;
+            }
+            .section {
+                border-bottom-color: #334155;
+            }
         }
     </style>
 </head>
